Now synchronised our work to take the app to the next level edit button still needs to be linked on the database

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -321,8 +321,7 @@ a:hover {
 /////////////////////////////////////////////////////////////////////*/
 
 #banner {
-    background: url('http://i.imgur.com/Lj4DLLF.png');
-    background-size: cover;
+    
     padding-top: 80px;
     background-attachment: fixed;
     position: relative;
@@ -471,6 +470,7 @@ a:hover {
 }
 .team-member p {
     padding: 10px 10px 15px 10px;
+    font-size: initial;
 }
 .team-member h2 {
     font-size: 25px;
