--- a/public/css/countdown.css
+++ b/public/css/countdown.css
@@ -23,9 +23,11 @@
 }
 
 p {
-  margin: 0;
-  color: #00CE9B;
-  font-weight: 700;
+    margin: 0px;
+    color: #00CE9B;
+    font-weight: 900;
+    text-align: center;
+    font-size: 35px;
 }
 
 #result {
