--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,8 +86,9 @@ a:hover {
     max-width: 100%;
 }
 .block-title {
+    background-color: lightseagreen;
     font-weight: 300;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: serif;
     font-size: 3.8em;
     padding: 0 40px;
     margin: 0;
@@ -108,39 +109,39 @@ a:hover {
 }
 .bb-top-left {
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 33px;
+    height: 33px;
     top: 0;
     left: 0;
-    border-top: 1px solid #000;
-    border-left: 1px solid #000;
+    border-top: 11px solid #3D3452;
+    border-left: 11px solid #3D3452;
 }
 .bb-bottom-left {
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 33px;
+    height: 33px;
     bottom: 0;
     left: 0;
-    border-bottom: 1px solid #000;
-    border-left: 1px solid #000;
+    border-bottom: 11px solid #3D3452;
+    border-left: 11px solid #3D3452;
 }
 .bb-top-right {
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 33px;
+    height: 33px;
     top: 0;
     right: 0;
-    border-top: 1px solid #000;
-    border-right: 1px solid #000;
+    border-top: 11px solid #3D3452;
+    border-right: 11px solid #3D3452;
 }
 .bb-bottom-right {
     position: absolute;
-    width: 15px;
-    height: 15px;
     bottom: 0;
     right: 0;
-    border-bottom: 1px solid #000;
-    border-right: 1px solid #000;
+    width: 33px;
+    height: 32px;
+    border-bottom: 11px solid #3D3452;
+    border-right: 11px solid #3D3452;
 }
 .polo-btn {
     display: block;
@@ -320,8 +321,53 @@ a:hover {
 //  06 - Banner
 /////////////////////////////////////////////////////////////////////*/
 
+/*below is table style*/
+.table {
+  border: 1px solid #e3e3e3;
+  background-color: #f2f2f2;
+  width: 100%;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+}
+.table td, .table th {
+  padding: 5px;
+  margin-top: 20px;
+  color: #333;
+  border: inset;
+
+}
+.table thead {
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  padding: .2em 0 .2em .5em;
+  text-align: left;
+  color: #4B4B4B;
+  background-color: #C8C8C8;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#e3e3e3), color-stop(.6,#B3B3B3));
+  background-image: -moz-linear-gradient(top, #D6D6D6, #B0B0B0, #B3B3B3 90%);
+  border-bottom: solid 1px #999;
+}
+.table th {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 17px;
+    line-height: 20px;
+    font-style: normal;
+    text-align: center;
+    text-shadow: white 1px 1px 1px;
+}
+.table td {
+  line-height: 20px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  border-bottom: 1px solid #fff;
+  border-top: 1px solid #fff;
+}
+.table td:hover {
+  background-color: #fff;
+}
+/*below is table style*/
 #banner {
-    
+    background-color: paleturquoise;
     padding-top: 80px;
     background-attachment: fixed;
     position: relative;
@@ -426,13 +472,14 @@ a:hover {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .gallery-nav {
-    color: #6ecba9;
+    color: #A7BDB5;
+    background-color: slategray;
     font-size: 2em;
     margin: 0 1em;
     padding: 10px 19px;
     line-height: 0;
-    border: 1px solid #6ecba9;
-    border-radius: 50%;
+    border: 1px solid #9BA7A2;
+    border-radius: 31%;
 }
 
 .gallery-nav:hover,.gallery-nav:focus,.gallery-nav:active {
